--- a/docs/0.3.9/Events.md.hbs
+++ b/docs/0.3.9/Events.md.hbs
@@ -86,11 +86,11 @@ In this example, we respond to the user clicking on an item by firing a `selecte
 
 ```html
 <div class='catalogue'>
-  {{#items:i}}
-    <div on-tap='select' data-index='{{i}}'>
-      {{>content}}
+  \{{#items:i}}
+    <div on-tap='select' data-index='\{{i}}'>
+      \{{>content}}
     </div>
-  {{/items}}
+  \{{/items}}
 </div>
 ```
 
