--- a/docs/0.3.9/Ractive.extend().md.hbs
+++ b/docs/0.3.9/Ractive.extend().md.hbs
@@ -50,7 +50,7 @@ Here's a simple example - we'll create a `Modal` subclass which has a default te
 <div class='modal-background' proxy-tap='close' intro='fadeIn' outro='fadeOut'>
   <div class='modal-outer'>
     <div class='modal'>
-      {{>modalContent}}
+      \{{>modalContent}}
     </div>
   </div>
 </div>
