--- a/docs/0.3.9/Two-way binding.md.hbs
+++ b/docs/0.3.9/Two-way binding.md.hbs
@@ -11,7 +11,7 @@ If that's unhelpful for your app, you can disable it by passing `twoway: false` 
 Two-way binding works with `<input>` elements of any type, including the new HTML5 types such as `color` or `email`. In most cases, you just add a mustache as the `value` attribute - this must be a single, standard *interpolator* mustache, like this:
 
 ```html
-<input placeholder='Type your name' value='{{user.name}}'>
+<input placeholder='Type your name' value='\{{user.name}}'>
 ```
 
 In the example above, any changes the user makes to the input will be reflected in the `user.name` property.
@@ -22,8 +22,8 @@ Checkboxes are used to flag a property as `true` or `false`. Rather than binding
 
 ```html
 <label>
-	<input type='checkbox' checked='{{on}}'>
-	The lights are {{ on ? 'on' : 'off' }}
+	<input type='checkbox' checked='\{{on}}'>
+	The lights are \{{ on ? 'on' : 'off' }}
 </label>
 ```
 
@@ -31,14 +31,14 @@ Checkboxes are used to flag a property as `true` or `false`. Rather than binding
 
 ### Radios
 
-Radio buttons can be controlled in the same way as checkboxes. However the chances are, if you're using radio buttons, you have a set of mutually exclusive options to choose between. In this case, if you set the `name` attribute on a radio input to e.g. `{{someValue}}`, `someValue` will reflect the `value` of the currently checked option:
+Radio buttons can be controlled in the same way as checkboxes. However the chances are, if you're using radio buttons, you have a set of mutually exclusive options to choose between. In this case, if you set the `name` attribute on a radio input to e.g. `\{{someValue}}`, `someValue` will reflect the `value` of the currently checked option:
 
 ```html
-<label><input type='radio' name='{{color}}' value='red' checked> Red</label>
-<label><input type='radio' name='{{color}}' value='green'> Green</label>
-<label><input type='radio' name='{{color}}' value='blue'> Blue</label>
+<label><input type='radio' name='\{{color}}' value='red' checked> Red</label>
+<label><input type='radio' name='\{{color}}' value='green'> Green</label>
+<label><input type='radio' name='\{{color}}' value='blue'> Blue</label>
 
-<p>The currently selected color is <span style='color: {{color}};'>{{color}}</span></p>
+<p>The currently selected color is <span style='color: \{{color}};'>\{{color}}</span></p>
 ```
 
 In the example above, the value of `color` will initially be `'red'` (because that input is checked in the template), and will update as and when the user selects another option.
@@ -49,7 +49,7 @@ In the example above, the value of `color` will initially be `'red'` (because th
 Textareas work exactly the same as standard text inputs - slap a dynamic `value` attribute on them, and you're done:
 
 ```html
-<textarea value='{{content}}'></textarea>
+<textarea value='\{{content}}'></textarea>
 ```
 
 
@@ -58,11 +58,11 @@ Textareas work exactly the same as standard text inputs - slap a dynamic `value`
 Drop-down select menus are good when you have many options to choose from. They're straightforward to use in Ractive:
 
 ```html
-<select value='{{selectedCountry}}'>
+<select value='\{{selectedCountry}}'>
 	<option selected disabled>Select a country</option>
-	{{#countries}}
-		<option value='{{id}}'>{{name}}</option>
-	{{/countries}}
+	\{{#countries}}
+		<option value='\{{id}}'>\{{name}}</option>
+	\{{/countries}}
 </select>
 ```
 
@@ -90,9 +90,9 @@ In the example above, no country will initially be selected. If the user were to
 A mustache used in a two-way binding context must have an *unambiguous reference*. Consider the following:
 
 ```html
-{{#foo}}
-	<input value='{{bar}}'>
-{{/foo}}
+\{{#foo}}
+	<input value='\{{bar}}'>
+\{{/foo}}
 ```
 
 ```js
@@ -107,7 +107,7 @@ Ractive must decide, straight away, what [keypath](keypaths) to bind the input's
 
 But this might not be what you want - maybe you *did* want it to resolve to `'foo.bar'`.
 
-You have two options - either use a [restricted reference](mustaches#restricted-references), i.e. `<input value='{{.bar}}'>`, or ensure that `foo` has a `bar` property (even if the initial value is `undefined`).
+You have two options - either use a [restricted reference](mustaches#restricted-references), i.e. `<input value='\{{.bar}}'>`, or ensure that `foo` has a `bar` property (even if the initial value is `undefined`).
 
 ## Lazy updates
 
@@ -118,7 +118,7 @@ Under the hood, Ractive always binds to the `change` event (and the `click` even
 To use user input elsewhere in your app, you'll need to observe it using [[ractive.observe()]]:
 
 ```html
-<input placeholder='Type your name' value='{{user.name}}'>
+<input placeholder='Type your name' value='\{{user.name}}'>
 ```
 
 ```js
