--- a/docs/0.3.9/ractive.nodes.md.hbs
+++ b/docs/0.3.9/ractive.nodes.md.hbs
@@ -23,9 +23,9 @@ You can, if you're so inclined, use dynamic attributes, like so:
 
 ```html
 <ul>
-  {{#items:i}}
-    <li id='item_{{i}}'>{{content}}</li>
-  {{/items}}
+  \{{#items:i}}
+    <li id='item_\{{i}}'>\{{content}}</li>
+  \{{/items}}
 </ul>
 ```
 
