--- a/docs/0.3.9/Dependants.md.hbs
+++ b/docs/0.3.9/Dependants.md.hbs
@@ -17,9 +17,9 @@ This relationship is expressed through the `_depsMap` property of a Ractive inst
 In the case of [[expressions]] and [[observers]], we also need to consider dependants of *upstream keypaths*. For example, suppose we have a section based on a sorted array - if we modify one of the members of the array, we need to see if the sort order has changed or not as a result:
 
 ```html
-{{#( sort( list, 'name' ) )}}
-  <p>{{name}}</p>
-{{/()}}
+\{{#( sort( list, 'name' ) )}}
+  <p>\{{name}}</p>
+\{{/()}}
 ```
 
 ```js
@@ -50,6 +50,6 @@ As well as expressions, [[observers]] respond to both upstream and downstream ch
 
 ## Expressions with multiple dependencies
 
-The expression `{{ a + b }}` has two dependencies - `a` and `b` (or more accurately, whatever those [[references]] resolve to). The `_deps` graph actually includes objects representing those individual references, rather than the expression itself - the reference objects then notify the expression (if their value has changed) that it will need to re-evaluate itself.
+The expression `\{{ a + b }}` has two dependencies - `a` and `b` (or more accurately, whatever those [[references]] resolve to). The `_deps` graph actually includes objects representing those individual references, rather than the expression itself - the reference objects then notify the expression (if their value has changed) that it will need to re-evaluate itself.
 
 Because the expression has multiple dependencies, it won't trigger an update straight away - it will wait until all the new data has come in first. So doing `ractive.set({ a: 1, b: 2 })` will only trigger one update, not two.
