--- a/docs/0.3.9/Expressions.md.hbs
+++ b/docs/0.3.9/Expressions.md.hbs
@@ -5,31 +5,31 @@ Expressions allow you to use logic within a template. At their simplest, that ma
 
 ```html
 <div class='bar-chart'>
-  {{#bars:i}}
-    <div style='width: {{ value * 100 }}%;'>{{ i + 1 }}</div>
-  {{/bars}}
+  \{{#bars:i}}
+    <div style='width: \{{ value * 100 }}%;'>\{{ i + 1 }}</div>
+  \{{/bars}}
 </div>
 ```
 
 Or it could mean formatting a currency so that `1.79` renders as `£1.79p`:
 
 ```html
-<p>Price: <strong>{{ format( price ) }}</strong></p>
+<p>Price: <strong>\{{ format( price ) }}</strong></p>
 ```
 
 Or it could mean adding a class based on some condition:
 
 ```html
-<a class='button {{ active ? "on" : "off" }}'>switch</a>
+<a class='button \{{ active ? "on" : "off" }}'>switch</a>
 ```
 
 Or it could mean filtering a list to exclude certain records:
 
 ```html
 <ul>
-{{# exclude( list, 'N/A' ) }}
-  <li>{{author}}: {{title}}</li>
-{{/ end of filter }}
+\{{# exclude( list, 'N/A' ) }}
+  <li>\{{author}}: \{{title}}</li>
+\{{/ end of filter }}
 </ul>
 ```
 
@@ -60,8 +60,8 @@ But repeatedly `eval`ing the same code is a performance disaster. Instead, we us
 Using the `Function` constructor instead of `eval` is just one way that Ractive optimises expressions. Consider a case like this:
 
 ```html
-{{a}} + {{b}} = {{ a + b }}
-{{c}} + {{d}} = {{ c+d }}
+\{{a}} + \{{b}} = \{{ a + b }}
+\{{c}} + \{{d}} = \{{ c+d }}
 ```
 
 At *parse time*, Ractive generates an [abstract syntax tree](http://en.wikipedia.org/wiki/Abstract_syntax_tree) (AST) from these expressions, to verify that it's a valid expression and to extract any references that are used. It then 'stringifies' the AST, so that the expression can later be compiled into a function.
@@ -74,7 +74,7 @@ As anyone who has seen minified JavaScript can attest, JavaScript cares not one 
 
 (To minimise the risk of accidentally breaking things by including a string or property name in the expression that contains an underscore followed by an integer, we write the sequence as `${0}+${1}` during transportation from parser to renderer.)
 
-When we *evaluate* `{{ a + b }}` or `{{ c+d }}`, we can therefore use the same function but with different arguments. Recognising this, the function only gets compiled once, after which it is cached. (The cache is shared between all Ractive instances on the page.) Further, the result of the evaluation is itself cached (until one or more of the dependencies change), so you can repeat expressions as often as you like without creating unnecessary work.
+When we *evaluate* `\{{ a + b }}` or `\{{ c+d }}`, we can therefore use the same function but with different arguments. Recognising this, the function only gets compiled once, after which it is cached. (The cache is shared between all Ractive instances on the page.) Further, the result of the evaluation is itself cached (until one or more of the dependencies change), so you can repeat expressions as often as you like without creating unnecessary work.
 
 All of this means that you could have an expression within a list section that was repeated 10,000 times, and the corresponding function would be created once *at most*, and only called when necessary.
 
@@ -85,14 +85,14 @@ Within an expression, you can use `this` to refer to the current *context*:
 
 ```html
 <ul>
-  {{#items}}
+  \{{#items}}
     <!-- here, `this` means 'the current array member' -->
-    <li>{{this.toUpperCase()}}</li>
-  {{/items}}
+    <li>\{{this.toUpperCase()}}</li>
+  \{{/items}}
 </ul>
 ```
 
-In regular mustache, we have something called the *implicit iterator* - `{{.}}` - which does the same thing. Ractive allows you to use `this` in place of `.` for purely aesthetic reasons.
+In regular mustache, we have something called the *implicit iterator* - `\{{.}}` - which does the same thing. Ractive allows you to use `this` in place of `.` for purely aesthetic reasons.
 
 
 ## Supported global objects
