--- a/docs/0.3.9/Ractive.partials (instance).md.hbs
+++ b/docs/0.3.9/Ractive.partials (instance).md.hbs
@@ -11,4 +11,4 @@ ractive.partials.rickroll = '<iframe width="420" height="315" src="http://www.yo
 
 Where necessary, partials will be [parsed](ractive-parse) at the point of use, and stored as parsed partials thereafter.
 
-If Ractive encounters a partial mustache, e.g. `{{>rickroll}}`, it will look for instance-specific partials before looking in [Ractive.partials](ractive-partials-global).
+If Ractive encounters a partial mustache, e.g. `\{{>rickroll}}`, it will look for instance-specific partials before looking in [Ractive.partials](ractive-partials-global).
