--- a/scss/font.scss
+++ b/scss/font.scss
@@ -1,17 +1,17 @@
 @font-face{
 	font-family: 'Voltaire';
-	src: url('assets/fonts/Voltaire.eot');
-	src: url('assets/fonts/Voltaire.eot?#iefix') format('embedded-opentype'),
-	     url('assets/fonts/Voltaire.woff') format('woff'),
-	     url('assets/fonts/Voltaire.ttf') format('truetype'),
-	     url('assets/fonts/Voltaire.svg#webfont') format('svg');
+	src: url('fonts/Voltaire.eot');
+	src: url('fonts/Voltaire.eot?#iefix') format('embedded-opentype'),
+	     url('fonts/Voltaire.woff') format('woff'),
+	     url('fonts/Voltaire.ttf') format('truetype'),
+	     url('fonts/Voltaire.svg#webfont') format('svg');
 }
 
 @font-face{
 	font-family: 'Poiret One';
-	src: url('assets/fonts/PoiretOne.eot');
-	src: url('assets/fonts/PoiretOne.eot?#iefix') format('embedded-opentype'),
-	     url('assets/fonts/PoiretOne.woff') format('woff'),
-	     url('assets/fonts/PoiretOne.ttf') format('truetype'),
-	     url('assets/fonts/PoiretOne.svg#webfont') format('svg');
+	src: url('fonts/PoiretOne.eot');
+	src: url('fonts/PoiretOne.eot?#iefix') format('embedded-opentype'),
+	     url('fonts/PoiretOne.woff') format('woff'),
+	     url('fonts/PoiretOne.ttf') format('truetype'),
+	     url('fonts/PoiretOne.svg#webfont') format('svg');
 }
