--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -10,7 +10,7 @@
 
 	<!-- CSS -->
 	<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700,900' rel='stylesheet' type='text/css'>
-	<link rel='stylesheet' href='../min.css'>
+	<link rel='stylesheet' href='assets/min.css'>
 </head>
 
 <body class='example'>
