Laying the foundation to start building and organizing the left nab menu

--- a/docs/0.3.9/Initialisation options.md.hbs
+++ b/docs/0.3.9/Initialisation options.md.hbs
@@ -1,5 +1,6 @@
 ---
 title: Initialisation Options
+section: APIReference
 ---
 Create a new Ractive instance using the specified options. For example:
 
