--- a/docs/0.3.9/Plugin APIs.md.hbs
+++ b/docs/0.3.9/Plugin APIs.md.hbs
@@ -1,5 +1,6 @@
 ---
 title: Plugin APIs
+section: Plugins
 ---
 You can create plugins for Ractive that add new features. The plugin APIs are documented on these pages:
 
