--- a/docs/0.3.9/Plugins.md.hbs
+++ b/docs/0.3.9/Plugins.md.hbs
@@ -1,5 +1,6 @@
 ---
 title: Plugins
+section: Plugins
 ---
 Plugins allow you to augment Ractive with extra functionality. You can create your own plugins - see the [[Plugin APIs]] page and the [plugin template](https://github.com/RactiveJS/Plugin-template) to get started.
 
