--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -18,7 +18,7 @@
 		{{>header}}
 	</div>
 	<aside class="left-nav">
-		{{> left-nav}}
+		{{> left-nav.md}}
 	</aside>
 	<main class="main-content">
 		{{# markdown}}
