Fixing the slugifying of the build names, add back proper structure of files created.

--- a/templates/page.hbs
+++ b/templates/page.hbs
@@ -6,14 +6,15 @@
 
 	<link rel='icon' type='image/png' href='../favicon.png'>
 
-    <title > {{title }} | Docs | Ractive.js </title > 
+    <title > {{page.data.title}} | Docs | Ractive.js </title > 
 
 	<!-- CSS -->
 	<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,700,900' rel='stylesheet' type='text/css'>
-	<link rel='stylesheet' href='assets/min.css'>
+	<link rel='stylesheet' href='../min.css'>
 </head>
 
 <body class='example'>
+</ul>
 	<div class="header">
 		{{>header}}
 	</div>
