Setting up navigation to the same links just in case anyone bookmarked stuff

--- a/templates/partials/left-nav.md.hbs
+++ b/templates/partials/left-nav.md.hbs
@@ -1,24 +1,49 @@
-<h3>Introduction</h3>
+<h3><a href="{{relative absolute 'latest/'}}">Introduction</a></h3>
 <ul>
-	{{# each pages}}
-		{{#is data.section "Intro"}}
-			<li><a href="{{relative ../this.dest this.dest }}">{{data.title }}</a></li>
-		{{/is}}
-	{{/each}}
+	<li><a href="{{relative absolute 'latest/second-setup'}}">60 Second Setup</a></li>
+	<li><a href="http://examples.ractivejs.org/">Examples</a></li>
+	<li><a href="http://learn.ractivejs.org/">Tutorials</a></li>
 </ul>
-<h3>API Reference</h3>
+<h3><a href="{{relative absolute 'latest/api-reference'}}">API Reference</a></h3>
 <ul>
-	{{# each pages}}
-		{{#is data.section "APIReference"}}
-			<li><a href="{{relative ../this.dest this.dest }}">{{data.title }}</a></li>
-		{{/is}}
-	{{/each}}
+	<li><a href="{{relative absolute 'latest/initialisation-options'}}">Initialisation Options</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-animate'}}">ractive.animate()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-find'}}">active.find()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-findall'}}">ractive.findAll()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-fire'}}">ractive.fire()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-get'}}">ractive.get()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-merge'}}">ractive.merge()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-observe'}}">ractive.observe()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-off'}}">ractive.off()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-on'}}">ractive.on()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-set'}}">ractive.set()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-animate'}}">ractive.teardown()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-teardown'}}">ractive.toHTML()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-tohtml'}}">ractive.update()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-updatemodel'}}">ractive.updateModel()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-nodes'}}">ractive.nodes</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-transitions'}}">ractive.transitions</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-partials-instance'}}">ractive.parials</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-parse'}}">Ractive.parse()</a></li>
+	<li><a href="{{relative absolute 'latest/ractive-extend'}}">Ractive.extend()</a></li>
 </ul>
-<h3>Plugins</h3>
+<h3><a href="{{relative absolute 'latest/ractive-extend'}}">Plugins</a></h3>
+<h3>Templating</h3>
 <ul>
-	{{# each pages}}
-		{{#is data.section "Plugins"}}
-			<li><a href="{{relative ../this.dest this.dest }}">{{data.title }}</a></li>
-		{{/is}}
-	{{/each}}
+	<li><a href="{{relative absolute 'latest/templates'}}">Templates</a></li>
+	<li><a href="{{relative absolute 'latest/mustaches'}}">Mustaches</a></li>
 </ul>
+<h3><a href="{{relative absolute 'latest/adaptors'}}">Adapators</a></h3>
+<h3><a href="{{relative absolute 'latest/array-modification'}}">Array modification</a></h3>
+<h3><a href="{{relative absolute 'latest/components'}}">Components</a></h3>
+<h3><a href="{{relative absolute 'latest/decorators'}}">Decorators</a></h3>
+<h3><a href="{{relative absolute 'latest/dependants'}}">Dependants</a></h3>
+<h3><a href="{{relative absolute 'latest/expressions'}}">Expressions</a></h3>
+<h3><a href="{{relative absolute 'latest/keypaths'}}">Keypaths</a></h3>
+<h3><a href="{{relative absolute 'latest/magic-mode'}}">Magic Mode</a></h3>
+<h3><a href="{{relative absolute 'latest/observers'}}">Observers</a></h3>
+<h3><a href="{{relative absolute 'latest/parallel-dom'}}">Parallel DOM</a></h3>
+<h3><a href="{{relative absolute 'latest/partials'}}">Partials</a></h3>
+<h3><a href="{{relative absolute 'latest/references'}}">References</a></h3>
+<h3><a href="{{relative absolute 'latest/transitions'}}">Transitions</a></h3>
+<h3><a href="{{relative absolute 'latest/two-way-binding'}}">Two-way binding</a></h3>
